fix error in functionality that fetches and display repos

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,24 @@
+<div class="container">
+    <div class="card mt-5"  *ngIf='user'>
+        <div class="title">
+            <ul>
+                <span class="material-icons home-icon">home</span><li><a class="home-select" (click)='navigateHome()' appSelected> Home</a></li>
+               <span class="material-icons book-icon">book</span><li><a (click)='navigateRepos()' appSelected> Repositories</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
