--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <div class="card mt-5"  *ngIf='user'>
         <div class="title">
             <ul>
@@ -8,7 +8,7 @@
         </div>
     </div>
 </div>
-
+ -->
 
 
 
