--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,2 @@
-<div class="container">
-  <div class="text-center p-5">
-    <h3>
-      Sheilla Njoroge
-      <small class="text-muted">Github Public Repositories</small>
-    </h3>
-  </div>
-
-  <div class="row">
-    <div class="col-sm-6">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">
-            Special Title
-          </h5>
-          <p class="card-text">Below is a supporting text lead-in to additional content</p>
-          <a href="#" class="btn btn-primary">Get Repository</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<app-header></app-header>
+<router-outlet></router-outlet>
